# hextech-bot

./: .gitignore  README.md  pyproject.toml
data/: 1-1 100%.csv  1-2 100%.csv  1-3 100%.csv  2-1 100%.csv  2-2.csv
src/hextech-bot/: find_command.py  look_frame.py  main.py  show_timeline.py
src/hextech-bot/utils/: command.py  command_type.py  coord.py  hexbot.py  image_processing.py  square.py  timer.py  window_capture.py
